// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InArticlePuff should render optional fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-VigVT fFYEOs"
  >
    <div
      class="sc-jTzLTM eDNgiQ"
    >
      <a
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-bdVaJa eDCunu"
        >
          <img
            src="https://via.placeholder.com/150"
          />
        </div>
      </a>
    </div>
    <div
      class="sc-fjdhpX jYEIAF"
    >
      <div>
        <div
          class="sc-jzJRlG gHpUER"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-cSHVUG cZuXmi"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
        <div
          class="sc-kAzzGY empZnZ"
        >
          Enter your postcode to find your nearest centre
        </div>
      </div>
      <a
        class="sc-htpNat hcWCts"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-bxivhb EdIYi"
        >
          Read the full article
        </div>
        <svg
          class="iconForwardChevron"
          height="18"
          width="8"
        >
          IconForwardChevron
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render required fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-VigVT fFYEOs"
  >
    <div
      class="sc-fjdhpX hascUQ"
    >
      <div>
        <div
          class="sc-jzJRlG loswcC"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-cSHVUG bimsYo"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
      </div>
      <a
        class="sc-htpNat hcWCts"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-bxivhb EdIYi"
        >
          Read more
        </div>
        <svg
          class="iconForwardChevron"
          height="18"
          width="8"
        >
          IconForwardChevron
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-ifAKCX klRTpE"
  >
    <div>
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;
